- Started with autoformat

Reggie, 17.4.1999:
------------------
- More work on footnote descriptions
- More work on autoformat

Reggie, 18.4.1999:
------------------
- Fix with dropping images into a kword page
- More work on autoformat (started with typographic quotes stuff)

Reggie, 19.4.1999:
------------------
- Made typographic quotes autoformat stuff more efficient
- Started working on more autoformat stuff

Reggie, 20.4.1999:
------------------
- Implemented KWString::utf8() to convert KWStrings to utf8
- KWord saves and loads now in utf8
- More work on autoformat (implemented that annoying automatical conversation
  to uppercase letters :-)

Reggie, 23.4.1999:
------------------
- Implemented autoformat for Upper-Upper -> Upper-Lower
  convert (e.g. convert HAllo to Hallo)

Reggie, 24.4.1999:
------------------
- Improvements in Upper-Upper -> Upper-Lower and
  automatical uppercase conversation
- Started implementing dialog to configure autoformat
- Implemented methodes for configuration of simple autoformat

Reggie, 26.4.1999:
------------------
- Using now the KCharSelect widget of libkdeui for the character selector dialog
- More work on unicode
- More work on configuration and config dialog of autoformat
- Corrected some stuff in the templates

Reggie, 27.4.1999:
------------------
- Renamed Autoformat to Autocorrection in menues and dialogs
  (IMO this is a better name)
- Improved autoformat (now each character knows if it was corrected
  by autoformat, and if yes, it also knows it's original value which
  can be restored if the autoformat gets switched off)
- More work on autoformat configuration

Reggie, 28.4.1999:
------------------
- Some improvements in autoformat
- Fixed a memory leak

Reggie, 29.4.1999:
------------------
- Cursor gets updated correctly after changing autoformat configuration
- Cleanups

Reggie, 30.4.1999:
------------------
- More work on footnote descriptions
- typographic quotes for autocorrection are now configurable