@@ -1156,3 +1156,7 @@ Reggie, 30.4.1999:
 ------------------
 - More work on footnote descriptions
 - typographic quotes for autocorrection are now configurable
+
+Reggie, 1.5.1999:
+-----------------
+- Using new features of template dialog
